[package]
name = "sfynx"
license = "MIT"
version = "0.2.0"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography"]
description = "General-purpose onion routing packet construction and processor based on Sphinx."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptimitives = "0.15.2"
cryptraits = "0.10.0"
zeroize = "1.5.2"