[package]
name = "sfynx"
license = "MIT"
version = "0.4.0"
edition = "2021"
authors = ["Oleksandr Yermakov <olexander.yermakov@gmail.com>"]
categories = ["cryptography"]
keywords = ["crypto", "cryptography"]
description = "General-purpose onion routing packet construction and processor based on Sphinx."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = "1.0.1"
cryptimitives = { version = "0.16.7", default-features = false }
cryptraits = "0.12.1"
getrandom = "0.2.3"
zeroize = "1.4.3"

[features]
default = ["getrandom/std", "bip39/rand"]
std = ["cryptimitives/std"]